--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.less
@@ -39,6 +39,11 @@
 			align-items: baseline;
 			padding: 2px 0;
 
+			&.component-mode {
+				font-size: 20px;
+				margin-top: 12px;
+				margin-left: 30px;
+			}
 			div {
 				display: flex;
 				align-items: center;
