--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -43,7 +43,7 @@
 				</div>
 
 				<div class="results-table-body-col overlay-type">
-					<i class="{{overlay.icon}}"></i>
+					<i class="icon icon-{{overlay.icon}}"></i>
 				</div>
 
 			</div>
