--- a/src/app/@ansyn/map-facade/components/toast/toast.component.less
+++ b/src/app/@ansyn/map-facade/components/toast/toast.component.less
@@ -4,7 +4,7 @@
 
 div.toast {
 	background: rgba(0, 0, 0, 1);
-	position: fixed;
+	position: absolute;
 	color: white;
 	right: 14px;
 	top: calc(@status-bar-height + 60px);
