adding changes to outside

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -29,6 +29,7 @@
 		width: 100%;
 		overflow: hidden;
 		flex-direction: row;
+		position: relative;
 		background: @background-color-0;
 
 		div.menu {
