--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -39,11 +39,11 @@
 				</div>
 
 				<div class="results-table-body-col source-type">
-					{{overlay.sensorName | translate}}
+					{{overlay.sensorName | translate}}s
 				</div>
 
 				<div class="results-table-body-col overlay-type">
-					<i class="{{getType(overlay)}}"></i>
+					<i class="icon icon-{{overlay.icon}}"></i>
 				</div>
 
 			</div>
