--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -47,6 +47,10 @@
 				left: 0;
 				width: 100%;
 			}
+
+			&.hide-status-bar {
+				display: none;
+			}
 		}
 
 		div.layer {
@@ -63,6 +67,10 @@
 				flex-grow: 1;
 			}
 
+			&.hide-status-bar {
+				top: 0;
+				height: 100%;
+			}
 		}
 
 		&.animations {
