--- a/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/case-panel/case-panel.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!componentMode">
+<div *ngIf="!componentMode" class="rows">
 <div class="row top">
 	<span [attr.tooltip-value]="selectedCaseName$ | async"
 		tooltip-class="bottom">
@@ -18,7 +18,7 @@
 	</div>
 </div>
 </div>
-<div *ngIf="componentMode" class="bottom row component-mode">
+<div *ngIf="componentMode" class="component-mode">
 	<div [attr.tooltip-value]="statusBarConfig?.toolTips?.overlayCount | translate"
 		 tooltip-class="bottom">
 		<i class="block-icon icon-status-bar-imagery-count"></i>
