--- a/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/display-panel/display-panel.component.less
@@ -17,7 +17,7 @@
 		.display-button {
 			&:extend(.status-bar-button);
 			border: 1px solid #746666;
-
+			padding: 5px 7px;
 
 			&.active {
 				&:extend(.status-bar-button-active);
