--- a/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
+++ b/src/app/@ansyn/map-facade/components/map-search-box/map-search-box.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="show" (reset)="control.setValue('')" (submit)="onSubmit()">
+<form (reset)="control.setValue('')" (submit)="onSubmit()">
 	<input type="text" [placeholder]="'Search place or coordinates' | translate"
 		   [formControl]="control"
 		   [matAutocomplete]="auto">
