--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.html
@@ -1,8 +1,7 @@
 <div class="presets">
 	<div *ngFor="let preset of presetsDays" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
 		<button (click)="setPreset(preset)">
-			<span>{{preset}} </span>
-			<span>{{'days ago' | translate}}</span>
+			{{preset}} {{'days ago' | translate}}
 		</button>
 	</div>
 	<button
