change click function

--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -28,7 +28,7 @@
 			<span class="close-btn" (click)="closeWindow()">{{'Cancel' | translate }}</span>
 		</div>
 		<div class="guid">
-			<span (click)="credentialsService.openPermissionSite()">
+			<span (click)="credentialsService.downloadGuide()">
 				{{'permissions request guide' | translate}}
 			</span>
 			<span (click)="credentialsService.downloadGuide()">
