--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.html
@@ -1,6 +1,8 @@
 <div class="presets">
-	<div *ngFor="let preset of presetsData">
-		<button (click)="setPreset(preset.days)">{{preset.title | translate}}</button>
+	<div *ngFor="let preset of presetsDays" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
+		<button (click)="setPreset(preset)">
+			{{preset}} {{'days ago' | translate}}
+		</button>
 	</div>
 	<button
 		type="submit"
