--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -405,6 +405,7 @@
   "menuConfig": {
     "menuItems": {{ getv "/ansyn/menu/items" "null" }},
     "path": "assets/logo.svg",
+    "baseUrl": "http://platform.ansyn.io:81/#/",
     "color": "{{ getv "/ansyn/menu/color" "white" }}",
     "background": "{{ getv "/ansyn/menu/background" "red" }}",
     "mode": "{{ getv "/ansyn/menu/mode" "" }}",
