--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -23,7 +23,7 @@
 	<div class="results-table-body scrolled"  (ansynInfiniteScroll)="loadResults()" *ngIf="overlays">
 
 		<div class="results-table-body-row"
-			 *ngFor="let overlay of overlays"
+			 *ngFor='let overlay of overlays  | slice:start:end'
 			 (click)="openOverlay(overlay.id)"
 			 (mouseenter)="onMouseOver($event, overlay.id)"
 			 (mouseleave)="onMouseOut()"
