--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -340,6 +340,10 @@
     "ShadowMouse": {
     	"activeByDefault": {{ getv "/ansyn/is/shadow/active" "false"}},
     	"forceSendShadowMousePosition": {{ getv "/ansyn/force/send/shadow/mouse/position" "false"}}
+    },
+    "exportMap": {
+    	"target": "ansyn-imageries-manager",
+    	"excludeClasses": ["ol-attribution", "sentinel-combo"]
     }
   },
   "loggerConfig": {
