--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -81,6 +81,7 @@
 		justify-content: center;
 		align-items: center;
 		display: flex;
+		white-space: nowrap;
 
 		ansyn-popover {
 			min-width: 0;
