--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -141,6 +141,7 @@
 	}
   },
   "mapFacadeConfig": {
+  	"showOne2One": {{ getv "/ansyn/show/one2one" "true" }},
   	"welcomeNotification": {
 		"headerText": "Welcome to AnSyn!",
 		"mainText": "To get overlays anywhere in the world, just right click on the wanted area and click the central button"
