--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
@@ -17,7 +17,7 @@
 		</button>
 	</div>
 
-	<div class="buttons">
+	<div class="buttons" *ngIf="showOne2One">
 		<button class="small-icon-button"
 				(click)="one2one()">
 			1:1
