fix geo filter search style

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/search-panel/search-panel.component.less
@@ -55,6 +55,10 @@
 				overflow: hidden;
 				text-overflow: ellipsis;
 				}
+				span {
+					display: inline-block;
+					margin: 0 1px;
+				}
 			}
 		}
 
