add !important to icon-drag-annotation class in order to replace the related css class in annotation label component

--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -110,7 +110,7 @@
 	content: "\e826";
 }
 .icon-drag-annotations:before {
-	content: "\e827";
+	content: "\e827" !important;
 }
 .icon-next:before {
 	content: "\e828";
