--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -365,7 +365,10 @@
       "enlarge": "Expand timeline",
       "quickloop": "Next overlay from the quick loop (key: Q)"
     },
-    "filters": ["sensorName", "isGeoRegistered"],
+    "filters": {
+    	"filterNames": ["sensorName", "isGeoRegistered"],
+    	"maximumOpen": 2
+    },
     "locale": "en-GB"
   },
   "coreConfig": {
