--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -3,6 +3,7 @@
 
 :host {
 	&.component {
+		position: relative;
 		.app {
 			/deep/ ansyn-popover.default-case div.pop-hover .pop-content {
 				visibility: hidden !important;
