Bit refactor - filters - using state properly + separating filteredCount from  filters metadata. Because when filters metadata changes in the state, we need to update filteredCount. So if filteredCount is in metadata, we get an infinite loop.

--- a/src/app/@ansyn/ansyn/modules/filters/components/array-filter-container/array-filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/filters/components/array-filter-container/array-filter-container.component.html
@@ -9,6 +9,6 @@
 
 	</div>
 
-	<ansyn-filter-counter [count]="metadata.count" [filteredCount]="metadata.filteredCount"></ansyn-filter-counter>
+	<ansyn-filter-counter [count]="metadata.count" [filteredCount]="counters.filteredCount"></ansyn-filter-counter>
 
 </div>
