--- a/src/app/@ansyn/ansyn/modules/filters/components/enum-filter-container/enum-filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/filters/components/enum-filter-container/enum-filter-container.component.html
@@ -17,11 +17,10 @@
 
 	</div>
 
-
 	<ansyn-filter-counter
 		[isChecked]="enumMetadata.value.isChecked"
 		[count]="enumMetadata.value.count"
-		[filteredCount]="enumMetadata.value.filteredCount">
+		[filteredCount]="enumMetadata.filteredCount">
 	</ansyn-filter-counter>
 
 </div>
