--- a/src/app/@ansyn/ansyn/modules/filters/components/slider-filter-container/slider-filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/filters/components/slider-filter-container/slider-filter-container.component.html
@@ -17,6 +17,6 @@
 				  [min]="factor * metadata.min" [max]="factor * metadata.max"></p-slider>
 	</div>
 
-	<ansyn-filter-counter [count]="metadata.count" [filteredCount]="metadata.filteredCount"></ansyn-filter-counter>
+	<ansyn-filter-counter [count]="metadata.count" [filteredCount]="counters?.filteredCount"></ansyn-filter-counter>
 
 </div>
