--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/image-processing-control/image-processing-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/image-processing-control/image-processing-control.component.less
@@ -55,6 +55,7 @@
 					font-size: 9px;
 					cursor: pointer;
 					margin-left: 10px;
+					float: right;
 
 					&:hover {
 						cursor: pointer;
