fix-reset-all-margin-left-auto

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/image-processing-control/image-processing-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/image-processing-control/image-processing-control.component.less
@@ -50,12 +50,13 @@
 			p.title {
 				font-size: 13px;
 				margin: 0;
+				display: flex;
+
 				.resetAll {
 					color: @background-color-7;
 					font-size: 9px;
 					cursor: pointer;
-					margin-left: 10px;
-					float: right;
+					margin-left: auto;
 
 					&:hover {
 						cursor: pointer;
