--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -331,7 +331,48 @@
 		"min": 1,
 		"max": 100
 	  }
-	]
+	],
+	"defaultPosition": {
+    	 "extentPolygon": {
+    	   "type": "Polygon",
+    	   "coordinates": [
+    		 [
+    		   [
+    			 -122.4148614215284,
+    			 37.63937724672128
+    		   ],
+    		   [
+    			 -122.33393164831777,
+    			 37.63937724672128
+    		   ],
+    		   [
+    			 -122.33393164831777,
+    			 37.61041039245376
+    		   ],
+    		   [
+    			 -122.4148614215284,
+    			 37.61041039245376
+    		   ],
+    		   [
+    			 -122.4148614215284,
+    			 37.63937724672128
+    		   ]
+    		 ]
+    	   ]
+    	 },
+    	 "projectedState": {
+    	   "center": [
+    		 -13622657.226970552,
+    		 4526568.889831425
+    	   ],
+    	   "projection": {
+    		 "code": "EPSG:3857"
+    	   },
+    	   "resolution": 4.9229842315974395,
+    	   "rotation": 0,
+    	   "zoom": 14.956666666666665
+    	 }
+       }
   },
   "toolsConfig": {
     "ShadowMouse": {
