fix-base-map-btn-in-small-windows

--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/components/back-to-base-map/back-to-base-map.component.less
@@ -18,19 +18,65 @@
 				font-size: @icon-size;
 			}
 		}
+
+		button.menu-pinned {
+			font-size: 0;
+			overflow: hidden;
+			padding: 0;
+
+			&.small-icon-button {
+				margin: 0;
+			}
+		}
 	}
 }
 
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 1440px) { 
 	:host {
 		div.back-to-world-view {
-			button.menu-pinned {
+			button {
 				font-size: 0;
 				overflow: hidden;
 				padding: 0;
 
 				&.small-icon-button {
 					margin: 0;
+				}
+			}
+		}
+	}
+}
+
+.imageries-container {
+	&.layout2, &.layout4, &.layout6 {
+		:host {
+			div.back-to-world-view {
+				button {
+					font-size: 0;
+					overflow: hidden;
+					padding: 0;
+	
+					&.small-icon-button {
+						margin: 0;
+					}
+				}
+			}
+		}
+	}
+
+	&.layout5 {
+		:nth-child(2), :nth-child(3){
+			:host {
+				div.back-to-world-view {
+					button {
+						font-size: 0;
+						overflow: hidden;
+						padding: 0;
+		
+						&.small-icon-button {
+							margin: 0;
+						}
+					}
 				}
 			}
 		}
