--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.less
@@ -59,7 +59,7 @@
 					align-items: center;
 					position: relative;
 					width: 100%;
-					height: 7vh;
+					height: 10%;
 					text-align: left;
 					cursor: pointer;
 					box-sizing: border-box;
@@ -94,7 +94,7 @@
 			direction: rtl;
 			display: block;
 			overflow-y: auto;
-			max-height: 80vh;
+			height: 80vh;
 
 			div.results-table-body-row-data:hover {
 				background-color: @background-color-7;
