--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="box">
 			<i class="block-icon icon-status-bar-imagery-count"></i>
-			<span class="overlay-count">{{overlayCount || 0}}</span>
+			<span class="overlay-count">{{overlays.length || 0}}</span>
 		</div>
 	</div>
 	<div class="results-table-head">
@@ -24,10 +24,11 @@
 
 		<div class="results-table-body-row"
 			 *ngFor='let overlay of overlays  | slice:start:end'
+			 [id]="overlay.id"
 			 (click)="openOverlay(overlay.id)"
 			 (mouseenter)="onMouseOver($event, overlay.id)"
 			 (mouseleave)="onMouseOut()"
-			 [class.selected]="selectedOverlayId === overlay.id">
+			 [class.selected]="overlayIds.includes(overlay.id)">
 
 			<hr>
 
