fix-show-more-translate

--- a/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.html
+++ b/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.html
@@ -57,7 +57,7 @@
 		</div>
 
 		<div class="show-more-less" *ngIf="!isGotSmallListFromProvider && !showOnlyFavorite && !metadataFromState.collapse">
-			<span (click)="toggleShowMoreLess()">{{!isLongFiltersList ? 'SHOW MORE' : 'SHOW LESS' | translate}}</span>
+			<span (click)="toggleShowMoreLess()">{{(!isLongFiltersList ? 'SHOW MORE' : 'SHOW LESS') | translate}}</span>
 		</div>
 
 	</ng-template>
