change-ansyn-toast-location-to-statusBar

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/status-bar/status-bar.component.html
@@ -4,3 +4,6 @@
 </div>
 <ansyn-display-panel></ansyn-display-panel>
 <ansyn-case-panel></ansyn-case-panel>
+
+<!-- App overlays -->
+<ansyn-toast [duration]="4"></ansyn-toast>
