--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.html
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.html
@@ -1,7 +1,7 @@
 <div class="presets">
-	<div *ngFor="let preset of presetsDays" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
+	<div *ngFor="let preset of presets" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
 		<button (click)="setPreset(preset)">
-			{{preset}} {{'days ago' | translate}}
+			{{presetValue(preset)}} {{presetTitle(preset) | translate}}
 		</button>
 	</div>
 	<button
