--- a/src/app/@ansyn/map-facade/components/toast/toast.component.less
+++ b/src/app/@ansyn/map-facade/components/toast/toast.component.less
@@ -15,6 +15,7 @@ div.toast {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	z-index: 2;
 
 	span.message {
 		overflow: hidden;
