--- a/src/app/@ansyn/ansyn/modules/menu-items/help/components/help.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/help/components/help.component.less
@@ -121,6 +121,11 @@
 		background-image: url(/assets/icons/help/help_prev.svg);
 	}
 
+	// prevent font icons leak
+	.icon-prev:before {
+		content: none;
+	}
+
 	&:hover, &:focus {
 		opacity: 1;
 
@@ -135,6 +140,11 @@
 
 	.carousel-control-next-icon {
 		background-image: url(/assets/icons/help/help_next.svg);
+	}
+
+	// prevent font icons leak
+	.icon-next:before {
+		content: none;
 	}
 
 	&:hover, &:focus {
