--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/edit-layer/edit-layer.component.less
@@ -7,6 +7,10 @@ div.edit-layer {
 	box-sizing: border-box;
 	width: 200px;
 
+	&.rtl {
+		direction: rtl;
+	}
+
 	form.edit-layer-form {
 		position: relative;
 		width: 100%;
