--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.less
@@ -22,6 +22,12 @@ div.container {
 		}
 
 		ansyn-layer {
+			&.rtl {
+				/deep/.ansyn-checkbox-text {
+					direction: rtl;
+				}
+			}
+
 			&:hover {
 				background: rgba(255, 255, 255, 0.4);
 
