--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/delete-layer/delete-layer.component.html
@@ -1,4 +1,4 @@
-<div class="edit-layer">
+<div class="edit-layer" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
 	<form class="edit-layer-form" (ngSubmit)="removeLayer()">
 		<h4 [title]="layer?.name"><i
 			class="icon-delete"></i>&nbsp;{{'Delete' | translate}}&nbsp;"<span>{{ layer?.name }}</span>"?</h4>
