--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/download-layers/download-layers.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/data-layers-modals/download-layers/download-layers.component.html
@@ -1,4 +1,4 @@
-<div class="download">
+<div class="download" [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
 
 	<h4 [title]="layer?.name"><i
 		class="icon-layer-export"></i>&nbsp;{{'Export' | translate}}&nbsp;"<span>{{ layer?.name }}</span>"</h4>
