integrate with cesium sentinel provider - submodule branch add-cesium-sentinel-provider

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -257,7 +257,10 @@
 	},
   	"ESRI_4326": { },
 
-    "CESIUM_GEO_SERVER": { }
+    "CESIUM_GEO_SERVER": { },
+	"CESIUM_SENTINEL": {
+		"url": "http://ansyn.webiks.com:89/api/wms"
+	}
   },
   "filtersConfig": {
   	"shortFilterListLength": 8,
