--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
@@ -1,7 +1,7 @@
 <div
 	*ngIf="show"
 	[class.measure]="show"
-	[style.direction]="'ltr' === ('direction' | translate) ? 'rtl' : 'ltr'">
+	[style.direction]="'rtl' === ('direction' | translate) ? 'rtl' : 'ltr'">
 	<p>{{'Measure Distance' | translate}}</p>
 
 	<div class="buttons">
