adding padding for the scrollbar in the filter container

--- a/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/filters/components/filter-container/filter-container.component.less
@@ -82,10 +82,11 @@ div.container {
 		color: rgba(255, 255, 255, 0.75);
 		margin-right: 7px;
 		cursor: pointer;
+		margin-top: 5px;
 	}
 
 	div.fields {
 		overflow: auto;
-
+		margin-right: 10px;
 	}
 }
