adding double click to move between imagaries

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -10,7 +10,7 @@
 			 class="map-container-wrapper"
              #dragElement
 			 (click)="clickMapContainer(map.id)"
-			 (dblclick)="dbclick()"
+			 (dblclick)="clickMapContainer(map.id)"
 			 [id]="map.id"
 			 draggable="false">
 			<ansyn-imagery-container class="map"
