fixing export map from cutting the overlay name in chrome 68

--- a/src/app/@ansyn/map-facade/components/ansyn-popover/ansyn-popover.component.less
+++ b/src/app/@ansyn/map-facade/components/ansyn-popover/ansyn-popover.component.less
@@ -22,7 +22,7 @@
 		span {
 			margin-left: 5px;
 			line-height: 23px;
-			overflow: hidden;
+			width: 100%;
 			text-overflow: ellipsis;
 		}
 	}
