Fixing cases table

--- a/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/cases/components/cases-table/cases-table.component.html
@@ -61,7 +61,7 @@
 				</div>
 
 				<div class="cases-table-body-col">
-					{{formatTime(entities[id].lastModified)}}
+					{{entities[id].lastModified | ansynDate}}
 				</div>
 
 				<!--menu-->
