Fixing tasks table

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1503,13 +1503,13 @@
 		"alg_1" : {
 			"maxOverlays": 20,
 			"timeEstimationPerOverlayInMinutes": 10,
-			"sensorNames": [ "Sentinel-2A", "Sentinel-2B" ],
+			"sensorNames": [ "Sentinel-2A", "Sentinel-2B", "Multi-Spectral Instrument" ],
 			"regionLengthInMeters": 200
 		},
 		"alg_2" : {
 			"maxOverlays": 2,
 			"timeEstimationPerOverlayInMinutes": 20,
-			"sensorNames": [ "Sentinel-2A" ],
+			"sensorNames": [ "Sentinel-2A", "Multi-Spectral Instrument" ],
 			"regionLengthInMeters": 100
 		}
 	}
