--- a/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-table/tasks-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/algorithms/components/tasks-table/tasks-table.component.html
@@ -52,7 +52,7 @@
 				</div>
 
 				<div class="tasks-table-body-col">
-					{{formatTime(entities[id].runTime)}}
+					{{entities[id].runTime | ansynDate}}
 				</div>
 
 				<!--menu-->
