--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -36,7 +36,7 @@
 				<hr>
 
 				<div class="results-table-case-name-col overlay-time">
-					{{timeFormat(overlay.date)}}
+					{{overlay.date | ansynDate}}
 				</div>
 
 				<div class="results-table-body-col source-type">
