--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -1,19 +1,21 @@
-<ng-container *ngFor="let featureId of selection">
-	<div class="context-menu-wrapper"
-		 *ngIf="annotations?.idToEntity?.has(featureId)"
-		 [ngStyle]="calcBoundingRect(featureId)">
+<div *ngIf="show">
+	<ng-container *ngFor="let featureId of selection">
+		<div class="context-menu-wrapper"
+			 *ngIf="annotations?.idToEntity?.has(featureId)"
+			 [ngStyle]="calcBoundingRect(featureId)">
 
-		<div class="context-menu" [style.outline-color]="getFeatureProps(featureId)?.style?.initial?.stroke">
-			<ansyn-annotations-context-menu-buttons
-				[annotations]="annotations"
-				[featureId]="featureId"
-				[selectedTab]="selectedTab">
-			</ansyn-annotations-context-menu-buttons>
+			<div class="context-menu" [style.outline-color]="getFeatureProps(featureId)?.style?.initial?.stroke">
+				<ansyn-annotations-context-menu-buttons
+					[annotations]="annotations"
+					[featureId]="featureId"
+					[selectedTab]="selectedTab">
+				</ansyn-annotations-context-menu-buttons>
+			</div>
 		</div>
+	</ng-container>
+	<div class="context-menu-wrapper hover"
+		 *ngIf="annotations?.idToEntity?.has(hoverFeatureId)"
+		 [ngStyle]="calcBoundingRect(hoverFeatureId)">
+		<div class="context-menu" [style.outline-color]="getFeatureProps(hoverFeatureId)?.style?.initial?.stroke"></div>
 	</div>
-</ng-container>
-<div class="context-menu-wrapper hover"
-	 *ngIf="annotations?.idToEntity?.has(hoverFeatureId)"
-	 [ngStyle]="calcBoundingRect(hoverFeatureId)">
-	<div class="context-menu" [style.outline-color]="getFeatureProps(hoverFeatureId)?.style?.initial?.stroke"></div>
 </div>
