--- a/src/app/@ansyn/map-facade/components/ansyn-popover/ansyn-popover.component.less
+++ b/src/app/@ansyn/map-facade/components/ansyn-popover/ansyn-popover.component.less
@@ -25,7 +25,7 @@
 			overflow: hidden;
 			text-overflow: ellipsis;
 
-			&.hide-overflow {
+			&.show-overflow {
 				width: 100%;
 				overflow: unset;
 			}
