Adding dbclick to imagaries (#3317)
* fixing badge after opening menu

* adding double click to move between imagaries

* removing unecessary code

* refactor code

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -9,8 +9,7 @@
 		<div *ngFor="let map of mapsEntities; trackBy: trackByFun "
 			 class="map-container-wrapper"
              #dragElement
-			 (click)="clickMapContainer(map.id)"
-			 (dblclick)="dbclick()"
+			 (click)="changeActiveImagery(map.id)"
 			 [id]="map.id"
 			 draggable="false">
 			<ansyn-imagery-container class="map"
