disabled the arrows in the last or first overlay and fix the arrows bug

--- a/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/results/components/results-table/results-table.component.html
@@ -13,7 +13,7 @@
 			<div class="results-table-head-row-data">
 				<div (click)="sortOverlays(header)" *ngFor="let header of tableHeaders" class="results-table-head-col  {{header.headerName}}">
 					{{header.headerName | translate}}
-					<i class="icon icon-arrow" [@isDescending]="!header.isAscending" [class.active]="sortedBy === header.headerData"></i>
+					<i class="icon icon-arrow" [@isDescending]="header.isDescending" [class.active]="sortedBy === header.headerData"></i>
 				</div>
 			</div>
 
