refactor after cr

--- a/src/app/@ansyn/map-facade/components/ansyn-popover/ansyn-popover.component.html
+++ b/src/app/@ansyn/map-facade/components/ansyn-popover/ansyn-popover.component.html
@@ -1,6 +1,6 @@
 <div class="block pop-hover">
 	<i *ngIf="icon" [ngClass]="icon"></i>
-	<span [class.show-overflow]=hideOverflow>{{text}}</span>
+	<span [class.show-overflow]=showOverflow>{{text}}</span>
 
 	<div class="pop-content" [ngClass]="popDirection" (click)="$event.stopPropagation()">
 		<ng-content></ng-content>
